[package]
name = "stylus_erc20aton"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
# stylus-sdk = "0.6.0"

stylus-sdk = "=0.7.0-beta.1"
hex = "0.4.3"
dotenv = "0.15.0"
alloy-primitives = "0.8.13"
alloy-sol-types = "0.8.13"
alloy-sol-macro = "0.8.13"
cfg-if = "^1.0.0"
stylus-proc = "=0.7.0-beta.1"
derivative = "^2.2.0"



[dev-dependencies]
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-arenaton"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"


